<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Welcome_user</string>
    <string name="password" tools:ignore="DuplicateDefinition">Password</string>
    <string name="adminname">AdminName</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_here">Register Here.</string>
    <string name="todo">TODO</string>
    <string name="book_ticket">Book Ticket</string>
    <string name="details" tools:ignore="DuplicateDefinition">Details</string>
    <string name="valid_train_pass">Valid Train Pass:</string>
    <string name="valid_train_tickets">Valid Train Tickets:</string>
    <string name="valid_buss_pass">Valid Buss Pass:</string>
    <string name="textview">TextView:</string>
    <string name="trian_ticket">Trian Ticket</string>
    <string name="train_pass">Train Pass</string>
    <string name="bus_pass">Bus Pass</string>
    <string name="add_balance">Add Balance</string>
    <string name="details">Details</string>
    <string name="search">Search</string>
    <string name="search">Search</string>
    <string name="normal">Normal</string>
    <string name="password">Password</string>
    <string name="email_id">Email ID</string>
    <string name="phone_no">Phone No</string>
    <string name="full_name">Full Name</string>
    <string name="total_rupees">Total Rupees</string>
    <string name="submit">Submit</string>
    <string name="name1">Name:</string>
    <string name="name">Name</string>
    <string name="add">add</string>
    <string name="class">Class:</string>
    <string name="regular">Regular</string>
    <string name="to">To:</string>
    <string name="assad">assad</string>
    <string name="form">Form:</string>
    <string name="central">Central</string>
    <string name="line">Line:</string>
    <string name="first">First</string>
    <string name="ticket_type">Ticket Type:</string>
    <string name="single">Single</string>
    <string name="return">Return</string>
    <string name="rs">RS:</string>
    <string name="buss_pass">Buss Pass</string>
    <string name="pass_type">Pass Type</string>
    <string name="rs">RS:</string>
    <string name="to">To:</string>
    <string name="form">Form:</string>
    <string name="line">Line:</string>
    <string name="name">Name</string>
    <string name="name2">Name:</string>
    <string name="yearly">Yearly</string>
    <string name="quarterly">Quarterly</string>
    <string name="submit">Submit</string>
    <string name="user">User</string>
    <string name="central">Central</string>
    <string name="add">add</string>
    <string name="monthly">Monthly</string>
    <string name="total_rupees">Total Rupees</string>
    <string name="check_ticket">Check Ticket</string>
    <string name="name">Name</string>
    <string name="name">Name</string>
    <string name="select_type">Select Type:</string>
    <string name="search">Search</string>
    <string name="todo">TODO</string>
    <string name="textview22">TextView</string>
</resources>
