<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/pick">


    <TextView
        android:id="@+id/bt1"
        android:layout_width="151dp"
        android:layout_height="61dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/book_ticket"
        android:textColor="#bdbdbd"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/bt1"
        android:layout_marginStart="36dp"
        android:text="@string/name1"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/nl1"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="59dp"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/nl1"
        android:layout_marginTop="136dp"
        android:text="@string/line"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold" />

    <MultiAutoCompleteTextView
        android:id="@+id/multiAutoCompleteTextView2"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignStart="@+id/editText"
        android:text="@string/central"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="65dp"
        android:layout_height="39dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/nl1"
        android:layout_marginTop="214dp"
        android:text="@string/form"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold" />

    <MultiAutoCompleteTextView
        android:id="@+id/multiAutoCompleteTextView3"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignStart="@+id/editText"
        android:text="@string/assad"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="63dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/nl1"
        android:layout_marginBottom="246dp"
        android:text="@string/to"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold" />

    <MultiAutoCompleteTextView
        android:id="@+id/multiAutoCompleteTextView4"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView9"
        android:layout_alignStart="@+id/editText"
        android:text="@string/add"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/nl1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="195dp"
        android:text="@string/class"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView10"
        android:layout_centerHorizontal="true"
        android:text="@string/regular"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="94dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/textView10"
        android:layout_toEndOf="@+id/bt1"
        android:text="@string/first"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="134dp"
        android:layout_marginStart="13dp"
        android:text="@string/ticket_type"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView11"
        android:layout_alignStart="@+id/editText"
        android:text="@string/single"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView11"
        android:layout_alignEnd="@+id/editText"
        android:text="@string/return"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/nl1"
        android:layout_marginBottom="68dp"
        android:text="@string/rs"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView12"
        android:layout_marginEnd="91dp"
        android:text="@string/total_rupees"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold" />

    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="50dp"


        android:layout_below="@+id/textView12"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-68dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:id="@+id/3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:visibility="visible">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="73dp"
                android:layout_height="34dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/submit"
                android:textColor="#424242"
                android:textSize="18sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    </RelativeLayout>