<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pick"
    >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="160dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/buss_pass"
        android:textColor="#bdbdbd"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="71dp"
        android:layout_height="35dp"
        android:layout_above="@+id/editText"
        android:layout_alignStart="@+id/textView12"
        android:text="@string/name2"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView4"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/user"
        android:textColor="#bdbdbd"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/multiAutoCompleteTextView2"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="-143dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="59dp"
        android:layout_height="36dp"
        android:layout_alignBottom="@+id/editText"
        android:layout_alignEnd="@+id/textView5"
        android:text="@string/line"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold" />

    <MultiAutoCompleteTextView
        android:id="@+id/multiAutoCompleteTextView2"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="143dp"
        android:text="@string/central"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="65dp"
        android:layout_height="39dp"
        android:layout_alignBottom="@+id/multiAutoCompleteTextView2"
        android:layout_alignStart="@+id/textView9"
        android:text="@string/form"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="63dp"
        android:layout_height="45dp"
        android:layout_alignEnd="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_marginTop="218dp"
        android:text="@string/to"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold" />

    <MultiAutoCompleteTextView
        android:id="@+id/multiAutoCompleteTextView4"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView9"
        android:layout_alignParentEnd="true"
        android:text="@string/add"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="238dp"
        android:text="@string/pass_type"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView11"
        android:layout_alignStart="@+id/editText"
        android:text="@string/monthly"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/editText"
        android:layout_marginBottom="155dp"
        android:text="@string/quarterly"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/radioButton4"
        android:layout_marginStart="23dp"
        android:layout_marginTop="-147dp"
        android:text="@string/rs"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView12"
        android:layout_marginEnd="91dp"
        android:text="@string/total_rupees"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioButton
        android:id="@+id/radioButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/editText"
        android:layout_marginBottom="196dp"
        android:text="@string/yearly"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold" />

    <android.support.v7.widget.CardView
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"


        app:cardElevation="10dp"
        android:layout_width="229dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="105dp">

        <RelativeLayout
            android:id="@+id/3"
            android:layout_width="262dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:visibility="visible">


            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="85dp"
                android:text="@string/submit"
                android:textColor="#424242"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>