<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pick"
    >

    <TextView
        android:id="@+id/textView6"
        android:layout_width="254dp"
        android:layout_height="52dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:text="@string/details"
        android:textColor="#bdbdbd"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginTop="159dp"
        android:text="@string/valid_train_tickets"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginTop="259dp"
        android:text="@string/valid_train_pass"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginBottom="194dp"
        android:text="@string/valid_buss_pass"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="117dp"
        android:layout_marginStart="75dp"
        android:text="@string/textview"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>