<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/pick"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="93dp" />

    <EditText
        android:id="@+id/3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/full_name"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="287dp" />


    <EditText
        android:id="@+id/2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="122dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/phone_no"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="287dp" />

    <EditText
        android:id="@+id/4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="191dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/email_id"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="195dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/password"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold" />

    <MultiAutoCompleteTextView
        android:id="@+id/multiAutoCompleteTextView"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/1"
        android:layout_marginBottom="120dp"
        android:text="@string/normal"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="51dp"
        android:text="@string/search"
        android:textColor="#424242"
        android:textSize="18sp"
        android:textStyle="bold" />


</RelativeLayout>