<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/pick"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tt2"
        android:layout_width="161dp"
        android:layout_height="34dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="134dp"
        android:text="@string/trian_ticket"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/t1"
        android:layout_width="164dp"
        android:layout_height="44dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp"
        android:text="@string/train_pass"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif" />

    <TextView
        android:id="@+id/bp"
        android:layout_width="165dp"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="245dp"
        android:text="@string/bus_pass"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif" />

    <TextView
        android:id="@+id/adb"
        android:layout_width="159dp"
        android:layout_height="49dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="183dp"
        android:text="@string/add_balance"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif" />

    <TextView
        android:id="@+id/d4"
        android:layout_width="167dp"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="217dp"
        android:text="@string/details"
        android:textColor="#bdbdbd"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif" />

    <android.support.v7.widget.CardView

        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"


        android:layout_alignParentEnd="true"
        android:layout_marginBottom="115dp"
        android:layout_marginEnd="30dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp" >

        <RelativeLayout
            android:id="@+id/sc1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/search"
                android:textColor="#424242"
                android:textSize="18sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>