<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pick"


    android:visibility="visible"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        app:srcCompat="@drawable/logo1"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/add1"
        android:layout_width="298dp"
        android:layout_height="48dp"
        android:layout_alignEnd="@+id/1"
        android:layout_centerVertical="true"
        android:background="#adadeb"
        android:drawableLeft="@mipmap/ic_launcher_admin"
        android:ems="10"
        android:hint="@string/adminname"
        android:inputType="textPersonName"
        android:text=""
        android:textColor="#bdbdbd"
        android:textSize="24sp"
        android:textStyle="bold"
        android:drawableStart="@mipmap/ic_launcher_admin" />

    <EditText
        android:id="@+id/1"
        android:layout_width="298dp"
        android:layout_height="58dp"

        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="171dp"
        android:layout_marginEnd="21dp"
        android:background="#adadeb"
        android:drawableLeft="@mipmap/ic_launcher_adminpass"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#bdbdbd"
        android:textSize="24sp"
        android:textStyle="bold"
        android:drawableStart="@mipmap/ic_launcher_adminpass" />

    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"


        android:layout_alignStart="@+id/1"
        android:layout_marginBottom="77dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp" >

        <RelativeLayout
            android:id="@+id/3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:visibility="visible">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="73dp"
                android:layout_height="34dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/textview22"
                android:textColor="#424242"
                android:textSize="18sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif" />
        </RelativeLayout>
</android.support.v7.widget.CardView>


</RelativeLayout>